--- a/_config.yml
+++ b/_config.yml
@@ -32,3 +32,7 @@ gems:
 exclude:
   - Gemfile
   - Gemfile.lock
+  - vendor/bundle
+  - .git
+  - .gitignore
+# exclude: ['vendor/bundle', '.git', '.bundle', '.gitignore', 'Gemfile', 'Gemfile.lock']
